--- a/task2.html
+++ b/task2.html
@@ -1,1 +1,24 @@
-<html></html>
+<html>
+    <head><title>Task 2</title></head>
+    <body>
+        <h1><b>Heading 1: Examples on Unordered List</b></h1>
+        <ul>
+            <li>Sportstar</li>
+            <li>Business Week</li>
+            <li>Time</li>
+        </ul>
+        <h2><b>Heading 2: Examples on Ordered List</b></h2>
+        <ol type="i" start="4">
+            <dd><li>Sportstar</li>
+            <dd><li>Business Week</li>
+            <dd><li>Time</li>
+        </ol>
+        <h3><b>Heading 3: Examples on Definition List</b></h3>
+        <dl>
+            <dt>Sports Magazine</dt>
+            <dd>Sportstar</dd>
+            <dt>Business Magazine</dt>
+            <dd>Business Week</dd>
+        </dl>
+    </body>
+</html>
