--- a/Week 4/Task1_Week4.html
+++ b/Week 4/Task1_Week4.html
@@ -3,21 +3,13 @@
     <title>Image Layout Page</title>
 </head>
 <body>
-    <img src="image1.jpg" style="border: 5px solid black;" alt="Image 1">
-    <a href="image2.jpg" target="_blank">
-        <img src="image2.jpg" style="width:100px,height:100px;">
-    </a>
-
-    <!-- image3.jpg aligned right -->
-    <h3>Image 3 (Aligned Right)</h3>
-    <img src="image3.jpg" style="float: right; margin-left: 15px;" alt="Image 3">
-    <p>This text is aligned to the left of the image, which is floated to the right.</p>
-    <div style="clear: both;"></div> <!-- Clear float -->
-
-    <!-- image4.png with 50px horizontal and vertical space -->
-    <h3>Image 4 (Padding)</h3>
-    <img src="image4.png" style="padding: 50px;" alt="Image 4">
-    <p>This image has 50px of space around it using padding.</p>
-
+    <p>Image1</p>
+    <img src="image1.jpg" border="5px">
+    <p>Image2</p>
+    <a href="https://www.reddit.com/r/PixelArt/comments/rk1t58/arctic_fox_100x100px_12_colors/"><img src="image2.jpg" width="100px" height="100px"></a>
+    <p align="right">Image3</p>
+    <img src="image3.jpg" align="right">
+    <p>Image4</p>
+    <img src="image4.jpg" width="500px" height="300px" hspace="50px" vspace="50px">
 </body>
 </html>
