Week 2 and Week 4 update

--- a/Week 4/Task2.1_Week4_about.html
+++ b/Week 4/Task2.1_Week4_about.html
@@ -6,7 +6,7 @@
     <h1>About This Site</h1>
     <p>This is the top of the about page.</p>
     <h2 id="contact">Contact Information</h2>
-    <p>Email: example@example.com</p>
+    <p>Email: html@html.com</p>
     <p>Phone: +123456789</p>
 </body>
 </html>
